// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCard > renders correctly with all directions > renders correctly direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <img
          alt=""
          class="styles_column__uy9lkpd styles__uy9lkpc"
          height="120"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
        />
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_column__uy9lkph styles__uy9lkpg styles__1nmmzmp1"
          style="--uy9lkp1: 120px; --uy9lkp2: 100%;"
        >
          <div
            class="stylesVariants__izqk8uk"
          />
          <div
            class="styles__1nmmzmp2"
          />
        </div>
        <div
          class="styles__uy9lkpj styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
      >
        <img
          alt=""
          class="styles_row__uy9lkpe styles__uy9lkpc"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
          width="220"
        />
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_row__uy9lkpi styles__uy9lkpg styles__1nmmzmp1"
          style="--uy9lkp1: unset; --uy9lkp2: 220px;"
        >
          <div
            class="stylesVariants__izqk8uk"
          />
          <div
            class="styles__1nmmzmp2"
          />
        </div>
        <div
          class="styles__uy9lkpj styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="styles__1nmmzmp1"
          >
            <div
              class="stylesVariants__izqk8ud"
              style="--izqk8u1: 7.5rem;"
            />
            <div
              class="styles__1nmmzmp2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
              >
                This is the children of the component
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      disabled=""
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_28__1do42ls22"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with empty string title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_column__uy9lkp9 styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__uy9lkp6 styles__xf61n40 styles_alignItems_flex-end_xxsmall__xf61n411 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            style="--_1d8tbmb3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_row__uy9lkpb styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_row__uy9lkp7 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_flex-end_xxsmall__xf61n46p"
            style="--_1d8tbmb3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and target 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_column__uy9lkp9 styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__uy9lkp6 styles__xf61n40 styles_alignItems_flex-end_xxsmall__xf61n411 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
            style="--_1d8tbmb3: 1;"
          >
            <div
              class="styles__uy9lkp5"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <img
          alt=""
          class="styles_column__uy9lkpd styles__uy9lkpc"
          height="120"
          src="/src/compositions/ContentCard/assets/illustration.png"
          style="--uy9lkp0: none;"
        />
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            /src/compositions/ContentCard/assets/illustration.png
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <small
                    class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
                  >
                    sub title test
                  </small>
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
                <p
                  class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                >
                  this is a description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with onClick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__uy9lkp3 styles_active_true__uy9lkp4"
      role="button"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with required title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h3
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with title with custom tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__uy9lkp3"
      target="_blank"
    >
      <div
        class="styles__uy9lkpf styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          style="--_1d8tbmb3: 1;"
        >
          <div
            class="styles_noHref__uy9lkpa styles__uy9lkp8 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
            style="--_1d8tbmb3: 1 1 auto;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
              style="--_1d8tbmb3: 1 1 auto;"
            >
              <div
                class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              >
                <div
                  class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
                >
                  <h1
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                  >
                    test
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
